--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
   <script>
-    alert( "I'm JavaScript!" );
+    alert( "I'm Jackson, I want to be a pro in  JavaScript!" );
   </script>
 
 </body>
