Practice is key

--- a/streetprojects/exams.html
+++ b/streetprojects/exams.html
@@ -1,5 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Exam Card</title>
+    <link href="exams.css" rel="stylesheet" type="text/css">
+    <style>
+      tr:hover {
+         background-color: #D6EEEE;
+      }
+   </style>
+  </head>
+  <body>
+    <table 1>
+            <tr>
+              <th>KISII NATIONAL POLYTECHNIC</th>
+            </tr><br>
+              <tr>
+                <td>AUTHORIZATION TO SIT EXAMINATIONS</td>
+              </tr>
+            </tr>
+              <tr>
+                <td>REG. NO.  DICTS23/1517</td><br>
+            <tr>
+              <td>NAME: NYANDUSI KERUBO CANDY</td><br>
+            </tr>
+            <tr>
+              <td>ACAD. YEAR: 2024  LEVEL: 1</td><br>
+            </tr>
+            <tr>
+              <td>SESSION: TERM 3 2024
+              </td><br>
+            </tr>
+            <tr>
+              <td text-align="right">Examination Officer</td><br>
+            </tr>
+    </table 1>
+
+    <table 2 style="position: absolute; top: 120px; right: 200px;">
+      <tr>
+        <th>CODE</th>
+        <th>UNIT NAME</th>
+        <th>INVG. SIGN</th>
+      </tr>
+    </table 2>
+  </body>
+</html>
