--- a/streetprojects/exams.html
+++ b/streetprojects/exams.html
@@ -12,28 +12,33 @@
    </style>
   </head>
   <body>
-    <table 1>
+    <table 1 style="position: absolute; top: 120px; left: 150px;">
+      <thead>
+      <td><img width=40px; src="images/logo.png"/></td>
             <tr>
               <th>KISII NATIONAL POLYTECHNIC</th>
             </tr><br>
               <tr>
-                <td>AUTHORIZATION TO SIT EXAMINATIONS</td>
+                <td style="text-align : center">AUTHORIZATION TO SIT EXAMINATIONS</td>
               </tr>
-            </tr>
+            </thead>
+              <tbody style="text-align:left">
               <tr>
-                <td>REG. NO.  DICTS23/1517</td><br>
+                <td style="text-align : left"><b>REG. NO.</b>  DICTS23/1517</td><br>
+              </tr>
             <tr>
-              <td>NAME: NYANDUSI KERUBO CANDY</td><br>
+              <td style="text-align : left"><b>NAME:</b> NYANDUSI KERUBO CANDY</td><br>
             </tr>
             <tr>
-              <td>ACAD. YEAR: 2024  LEVEL: 1</td><br>
+              <td style="text-align : left"><b>ACAD. YEAR:</b> 2024  <b>LEVEL</b> 1</td><br>
             </tr>
             <tr>
-              <td>SESSION: TERM 3 2024
+              <td style="text-align : left"><b>SESSION:</b> TERM 3 2024
               </td><br>
             </tr>
+              </tbody>
             <tr>
-              <td text-align="right">Examination Officer</td><br>
+              <td style="text-align : right">Examination Officer _____________</td><br>
             </tr>
     </table 1>
 
@@ -42,6 +47,16 @@
         <th>CODE</th>
         <th>UNIT NAME</th>
         <th>INVG. SIGN</th>
+      </tr>
+      <tr>
+        <td>COMS 101</td>
+        <td>Communication Skills</td>
+        <td>J.G.N</td>
+      </tr>
+      <tr>
+      <td>BIT 102</td>
+      <td>Programming Fundamentals</td>
+      <td>L.M.N</td>
       </tr>
     </table 2>
   </body>
